--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,20 +1,77 @@
-<div class="container">
+<div class="container-fluid">
   <h1 class="text-center"> Purchase and sell Papers </h1>
 
-  <table class="table">
-    <thead>
-    <tr>
-      <th> Address </th>
-      <th> Balance </th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr *ngFor="let account of accounts">
-      <td> {{account.address}} </td>
-      <td> {{account.balance}} ETH </td>
-    </tr>
-    </tbody>
-  </table>
+  <div class="row">
+    <div class="col-6">
 
-  <button class="btn btn-primary"> 버튼 </button>
+      <table class="table">
+        <thead>
+        <tr>
+          <th></th>
+          <th> Address </th>
+          <th> Balance </th>
+          <th> MZK </th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr *ngFor="let account of accounts">
+          <td> <button class="btn" [ngClass]="selectedAddress === account.address ? 'btn-success' : 'btn-info'" (click)="selectedAddress = account.address"> 선택 </button> </td>
+          <td> {{account.address}} </td>
+          <td> {{account.balance | number:'1.5'}} ETH </td>
+          <td> {{account.token | number:'1.5'}} MZK </td>
+        </tr>
+        </tbody>
+      </table>
+
+      <form #form="ngForm" (ngSubmit)="sellPaper(form)">
+        <div class="form-group row">
+          <label class="col-2 col-form-label"> Title </label>
+          <div class="col-10">
+            <input class="form-control" [(ngModel)]="title" name="title" id="title" required value="Hello Paper">
+          </div>
+        </div>
+        <div class="form-group row">
+          <label class="col-2 col-form-label"> Price </label>
+          <div class="col-10">
+            <input type="number" class="form-control" [(ngModel)]="price" name="price" id="price" required value="40000">
+          </div>
+        </div>
+        <div class="form-group row">
+          <label class="col-2 col-form-label"> File Hash </label>
+          <div class="col-10">
+            <input class="form-control" [(ngModel)]="hash" name="hash" id="hash" required>
+          </div>
+        </div>
+        <div class="form-group row">
+          <div class="offset-2 col-10">
+            <button type="submit" class="btn btn-success"> 판매 </button>
+          </div>
+        </div>
+      </form>
+    </div>
+    <div class="col-6">
+      <table class="table">
+        <thead>
+        <tr>
+          <th> Seller </th>
+          <th> Title </th>
+          <th> Price </th>
+          <th> FileHash </th>
+          <th> Buy </th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr *ngFor="let paper of papers">
+          <td> {{paper.seller}} </td>
+          <td> {{paper.title}} </td>
+          <td> {{paper.price | number:'1.5'}} MZK </td>
+          <td> {{paper.fileHash}} </td>
+          <td>
+            <button class="btn btn-primary" (click)="buyPaper(paper.id)"> 악보 구매 </button>
+          </td>
+        </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
 </div>
