--- a/src/app/page/test/test.component.html
+++ b/src/app/page/test/test.component.html
@@ -23,7 +23,7 @@
         </tbody>
       </table>
 
-      <form #form="ngForm" (ngSubmit)="sellPaper(form)">
+      <form #sellForm="ngForm" (ngSubmit)="sellPaper(sellForm)">
         <div class="form-group row">
           <label class="col-2 col-form-label"> Title </label>
           <div class="col-10">
@@ -72,7 +72,7 @@
         </tr>
         </tbody>
       </table>
-      <form #form="ngForm" (ngSubmit)="transferCoin(form)">
+      <form #transferForm="ngForm" (ngSubmit)="transferCoin(transferForm)">
         <div class="form-group row">
           <label class="col-2 col-form-label"> To </label>
           <div class="col-10">
