--- a/projects/wallet/src/app/page/wallet/wallet.component.html
+++ b/projects/wallet/src/app/page/wallet/wallet.component.html
@@ -1,10 +1,4 @@
-<nav class="navbar navbar-light bg-light">
-  <div class="container">
-    <div class="navbar-brand">
-      <img src="../../../assets/muzika-brand-sm.png" height="30">
-    </div>
-  </div>
-</nav>
+<app-navbar></app-navbar>
 
 <div class="balance-wrapper d-flex align-items-center">
   <div class="container">
