--- a/projects/wallet/src/app/page/main/main.component.scss
+++ b/projects/wallet/src/app/page/main/main.component.scss
@@ -1,7 +1,11 @@
+@import '../../../theme/variables';
+
 :host {
-  position: relative;
-  display: block;
-  background-color: #010e1e;
+  height: 100vh;
+  width: 100%;
+  padding-top: 60px;
+  display: flex;
+  flex-direction: column;
 }
 
 app-navbar {
@@ -12,47 +16,189 @@ app-navbar {
   z-index: 10;
 }
 
-.background {
-  height: 100vh;
-  width: 100%;
-  padding-top: 60px;
-  background: url(../../../assets/back.jpg) no-repeat 50%;
+h1 {
+  font-family: "Libre Baskerville";
+  color: $main-color-text;
+  text-align: center;
+}
+
+.method {
+  flex: 1;
   display: flex;
-  flex-direction: column;
+  align-items: center;
 
-  >h1 {
-    font-family: "Libre Baskerville";
-    color: white;
-    text-align: center;
-  }
+  .wrapper {
+    // box-shadow: #ffffff61 0 0 6px 2px;
+    background: rgba(0, 0, 0, 0.6);
+    padding: 50px;
+    padding-top: 20px;
 
-  >.method {
-    flex: 1;
-    display: flex;
-    align-items: center;
-
-    .method-wrapper {
-      background: rgba(0, 0, 0, 0.6);
-      padding: 50px;
-      border-radius: 15px;
-      border: 6px solid #081523;
+    a {
+      cursor: pointer;
     }
-  }
 
-  >.other-method {
-    margin: 32px;
-    color: white;
-    text-align: center;
-    text-decoration: underline;
+    h2 {
+      margin-bottom: 60px;
+    }
+
+    .btn {
+      $beforeSize: 20px;
+      $afterSize: 24px;
+
+      .method-name {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-size: $beforeSize;
+        flex-direction: column;
+        transition: font-size 0.15s ease-in-out;
+        color: $main-color-text;
+
+        app-icon-ledger, app-icon-trezor, app-icon-json {
+          height: $beforeSize + 8px;
+          fill: $main-color-text;
+          transition: height 0.15s ease-in-out;
+        }
+        i {
+          font-size: $beforeSize + 8px;;
+          transition: font-size 0.15s ease-in-out;
+        }
+        .name {
+          margin-top: 4px;
+          text-transform: uppercase;
+          font-weight: bold;
+        }
+      }
+
+      &:hover {
+        background: rgba(255, 255, 255, 0.3);
+        .method-name {
+          font-size: $afterSize;
+          i {
+            font-size: $afterSize + 8px;;
+          }
+          app-icon-ledger, app-icon-trezor, app-icon-json {
+            height: $afterSize + 8px;;
+          }
+        }
+      }
+
+      &:active {
+        .method-name {
+          color: $main-color-active-text;
+          app-icon-ledger, app-icon-trezor, app-icon-json {
+            fill: $main-color-active-text;
+          }
+        }
+      }
+    }
   }
 }
 
-.provider {
-  margin: 10px 0;
+.other-method {
+  margin: 64px;
+  font-size: 1.2rem;
+  color: $main-color-text;
+  text-align: center;
+  text-decoration: underline;
+}
 
-  button {
+.provider {
+  // margin: 10px 0;
+
+  .btn {
     width: 100%;
     height: 320px;
+  }
+}
+
+.inner {
+  position: relative;
+  height: 320px;
+
+  .row {
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    transition: transform 0.15s ease-in-out;
+
+    &.hide {
+      transform: scaleY(0);
+    }
+
+    &.show {
+      transition-delay: 0.15s;
+      transform: scaleY(1);
+    }
+  }
+
+  .extra {
+    form {
+      width: 100%;
+    }
+
+    .input-group-prepend {
+      .input-group-text {
+        background: transparent;
+        border: none;
+        border-bottom: 1px solid $main-color-text;
+        color: $main-color-text;
+        border-radius: 0;
+      }
+    }
+
+    input {
+      background: transparent;
+      border: none;
+      border-bottom: 1px solid $main-color-text;
+      box-shadow: none;
+      color: $main-color-text;
+      text-align: center;
+      border-radius: 0;
+      padding-right: calc(0.75rem + 38px);
+    }
+
+    .btn-outline-light {
+      &:hover {
+        background: $color-hover-background;
+        color: $main-color-text;
+      }
+    }
+
+    .keystore-file {
+      padding: 3px;
+      border: 1px dashed $main-color-text;
+      width: 160px;
+      height: 160px;
+      color: $main-color-text;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      cursor: pointer;
+      transition: background-color 0.15s ease-in-out;
+
+      #keystore-file-name {
+        word-break: break-all;
+        overflow: hidden;
+        text-overflow: ellipsis;
+      }
+
+      .fa {
+        font-size: 2.4rem;
+      }
+
+      &:hover {
+        background-color: $color-hover-background;
+      }
+    }
+
+    #keyPassword {
+      &::placeholder {
+        color: rgba(255, 255, 255, 0.6);
+      }
+    }
   }
 }
 
