--- a/projects/wallet/src/app/page/wallet/wallet.component.html
+++ b/projects/wallet/src/app/page/wallet/wallet.component.html
@@ -58,7 +58,8 @@
         </div>
       </div>
       <div class="d-flex justify-content-center">
-        <button type="button" class="btn btn-outline-light" id="transfer" (click)="transfer(transferForm)">
+        <button type="button" class="btn btn-outline-light" id="transfer"
+                (click)="transfer(transferForm)" [disabled]="!supportTransfer">
           코인 전송
         </button>
       </div>
