--- a/projects/wallet/src/app/page/main/main.component.html
+++ b/projects/wallet/src/app/page/main/main.component.html
@@ -111,7 +111,7 @@
               <div class="form-group">
                 <div class="input-group">
                   <div class="input-group-prepend">
-                    <span class="input-group-text"><i class="fa fa-address-book"></i></span>
+                    <span class="input-group-text"><i class="fa fa-qrcode"></i></span>
                   </div>
                   <input type="text" class="form-control" name="address" id="address" ngModel required>
                 </div>
