--- a/projects/wallet/src/app/page/wallet/wallet.component.html
+++ b/projects/wallet/src/app/page/wallet/wallet.component.html
@@ -53,6 +53,13 @@
                   </div>
                 </div>
               </div>
+              <div class="form-group">
+                <p class="text-center text-main-color">
+                  <input type="checkbox" name="agreeTransfer" id="agreeTransfer"
+                         [(ngModel)]="agreeTransfer" required>
+                  위 내용으로 코인을 전송합니다. 한번 더 확인해 주세요.
+                </p>
+              </div>
             </form>
           </div>
         </div>
