--- a/projects/wallet/src/app/component/navbar/navbar.component.html
+++ b/projects/wallet/src/app/component/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-light">
   <div class="container">
-    <div class="navbar-brand">
+    <div class="navbar-brand" routerLink="/">
       <img src="../../../assets/muzika-brand-sm-white.png" height="30">
     </div>
   </div>
