--- a/projects/wallet/src/app/page/main/main.component.html
+++ b/projects/wallet/src/app/page/main/main.component.html
@@ -13,7 +13,7 @@
 
       <div class="inner">
         <div class="row" [class.show]="!showExtra" [class.hide]="showExtra">
-          <div class="provider col">
+          <div class="provider col d-none d-md-block">
             <button type="button" class="btn btn-outline-light" (click)="usingMetamask()">
               <span class="method-name">
                 <i class="fa fa-desktop-alt"></i>
@@ -21,7 +21,7 @@
               </span>
             </button>
           </div>
-          <div class="provider col">
+          <div class="provider col d-none d-md-block">
             <button type="button" class="btn btn-outline-light" (click)="usingGanache()" disabled>
               <span class="method-name">
                 <app-icon-ledger></app-icon-ledger>
@@ -30,7 +30,7 @@
               </span>
             </button>
           </div>
-          <div class="provider col">
+          <div class="provider col d-none d-md-block">
             <button type="button" class="btn btn-outline-light" (click)="usingGanache()" disabled>
               <span class="method-name">
                 <app-icon-trezor></app-icon-trezor>
@@ -58,9 +58,9 @@
         </div>
 
         <div class="row extra" [class.show]="showExtra" [class.hide]="!showExtra">
-          <div class="offset-1 col-10 d-flex align-items-center" *ngIf="extraType==='keystore'">
+          <div class="offset-md-1 col-md-10 d-flex align-items-center" *ngIf="extraType==='keystore'">
             <form #keystoreForm="ngForm" (ngSubmit)="usingKeystore(keystoreForm)">
-              <div class="d-flex">
+              <div class="d-block d-md-flex">
                 <div class="form-group text-center">
                   <label class="keystore-file" for="keystore-select">
                     <input type="file" class="d-none" id="keystore-select" name="keystore-select" ngModel
@@ -71,8 +71,7 @@
                     </div>
                   </label>
                 </div>
-                <div class="form-group text-center flex-grow-1 d-flex justify-content-center flex-column"
-                     style="margin-left: 20px;">
+                <div class="form-group text-center flex-grow-1 d-flex justify-content-center flex-column">
                   <h5 class="text-center text-main-color"> 지갑 파일 선택 후 비밀번호를 입력해주세요 </h5>
                   <div class="input-group">
                     <div class="input-group-prepend">
