--- a/projects/wallet/src/app/page/main/main.component.scss
+++ b/projects/wallet/src/app/page/main/main.component.scss
@@ -1,4 +1,5 @@
 @import '../../../theme/variables';
+@import '../../../theme/breakpoint';
 
 :host {
   height: 100vh;
@@ -33,12 +34,20 @@ h1 {
     padding: 50px;
     padding-top: 20px;
 
+    @include media-breakpoint-down(md) {
+      padding: 20px;
+    }
+
     a {
       cursor: pointer;
     }
 
     h2 {
-      margin-bottom: 60px;
+      margin-bottom: 4rem;
+
+      @include media-breakpoint-down(md) {
+        margin-bottom: 2rem
+      }
     }
 
     .btn {
@@ -60,7 +69,7 @@ h1 {
           transition: height 0.15s ease-in-out;
         }
         i {
-          font-size: $beforeSize + 8px;;
+          font-size: $beforeSize + 8px;
           transition: font-size 0.15s ease-in-out;
         }
         .name {
@@ -75,10 +84,10 @@ h1 {
         .method-name {
           font-size: $afterSize;
           i {
-            font-size: $afterSize + 8px;;
+            font-size: $afterSize + 8px;
           }
           app-icon-ledger, app-icon-trezor, app-icon-json {
-            height: $afterSize + 8px;;
+            height: $afterSize + 8px;
           }
         }
       }
@@ -88,6 +97,34 @@ h1 {
           color: $main-color-active-text;
           app-icon-ledger, app-icon-trezor, app-icon-json {
             fill: $main-color-active-text;
+          }
+        }
+      }
+
+      @include media-breakpoint-down(md) {
+        $beforeSize: 10px;
+        $afterSize: 10px;
+
+        .method-name {
+          font-size: $beforeSize;
+
+          app-icon-ledger, app-icon-trezor, app-icon-json {
+            height: $beforeSize + 8px;
+          }
+          i {
+            font-size: $beforeSize + 8px;
+          }
+        }
+
+        &:not(:disabled):not(.disabled):hover {
+          .method-name {
+            font-size: $afterSize;
+            i {
+              font-size: $afterSize + 8px;
+            }
+            app-icon-ledger, app-icon-trezor, app-icon-json {
+              height: $afterSize + 8px;
+            }
           }
         }
       }
@@ -101,6 +138,10 @@ h1 {
   color: $main-color-text;
   text-align: center;
   text-decoration: underline;
+
+  @include media-breakpoint-down(md) {
+    margin: 15px;
+  }
 
   a {
     color: $main-color-text;
@@ -116,13 +157,17 @@ h1 {
 
   .btn {
     width: 100%;
-    height: 320px;
+    height: 100%;
   }
 }
 
 .inner {
   position: relative;
-  height: 320px;
+  height: 340px;
+
+  @include media-breakpoint-down(md) {
+    height: 200px;
+  }
 
   .row {
     position: absolute;
@@ -186,6 +231,7 @@ h1 {
       justify-content: center;
       cursor: pointer;
       transition: background-color 0.15s ease-in-out;
+      margin-right: 20px;
 
       #keystore-file-name {
         word-break: break-all;
@@ -199,6 +245,16 @@ h1 {
 
       &:hover {
         background-color: $color-hover-background;
+      }
+
+      @include media-breakpoint-down(sm) {
+        width: 80px;
+        height: 80px;
+        margin: auto;
+
+        .fa {
+          font-size: 1.4rem;
+        }
       }
     }
 
