--- a/projects/wallet/src/app/page/main/main.component.html
+++ b/projects/wallet/src/app/page/main/main.component.html
@@ -98,7 +98,7 @@
                   <div class="input-group-prepend">
                     <span class="input-group-text"><i class="fa fa-lock"></i></span>
                   </div>
-                  <input type="password" class="form-control" name="privKey" id="privKey" ngModel required>
+                  <input type="password" class="form-control" name="privKey" id="privKey" ngModel required pattern="[a-fA-F0-9]{64}">
                 </div>
               </div>
               <div class="text-center" style="margin-top: 12px;">
@@ -117,7 +117,7 @@
                   <div class="input-group-prepend">
                     <span class="input-group-text"><i class="fa fa-qrcode"></i></span>
                   </div>
-                  <input type="text" class="form-control" name="address" id="address" ngModel required>
+                  <input type="text" class="form-control" name="address" id="address" ngModel required pattern="0x[a-fA-F0-9]{40}">
                 </div>
               </div>
               <div class="text-center" style="margin-top: 12px;">
