refactor(project): Remove icons component but manage with individual module BrandIconModule.

--- a/projects/prototype/src/app/component/navbar/navbar.component.scss
+++ b/projects/prototype/src/app/component/navbar/navbar.component.scss
@@ -1,6 +1,17 @@
+@import '../../../theme/variables';
+
+:host {
+  background-color: #fff;
+  display: block;
+  height: 75px;
+}
+
 .navbar-brand {
-  font-weight: 700;
-  line-height: 30px;
   outline: none;
   cursor: pointer;
+
+  brand-icon-muzika {
+    height: 30px;
+    fill: #000;
+  }
 }
