--- a/projects/prototype/src/app/page/main/main.component.html
+++ b/projects/prototype/src/app/page/main/main.component.html
@@ -24,7 +24,7 @@
           <div class="provider col d-none d-md-block">
             <button type="button" class="btn btn-outline-light" (click)="displayExtra('ledger')">
               <span class="method-name">
-                <app-icon-ledger></app-icon-ledger>
+                <brand-icon-ledger></brand-icon-ledger>
                 <span class="name">Ledger</span>
               </span>
             </button>
@@ -32,7 +32,7 @@
           <div class="provider col d-none d-md-block">
             <button type="button" class="btn btn-outline-light" (click)="usingGanache()" disabled>
               <span class="method-name">
-                <app-icon-trezor></app-icon-trezor>
+                <brand-icon-trezor></brand-icon-trezor>
                 <span class="name">Trezor</span>
                 <small> 준비중 </small>
               </span>
@@ -41,7 +41,7 @@
           <div class="provider col">
             <button type="button" class="btn btn-outline-light" (click)="displayExtra('keystore')">
               <span class="method-name">
-                <app-icon-json></app-icon-json>
+                <brand-icon-json></brand-icon-json>
                 <span class="name">Keystore</span>
               </span>
             </button>
