--- a/projects/prototype/src/theme/_variables.scss
+++ b/projects/prototype/src/theme/_variables.scss
@@ -5,3 +5,11 @@ $main-color-hover-text: #ffffff;
 $main-color-active-text: #000000;
 
 $color-hover-background: rgba(255, 255, 255, 0.3);
+
+$primary-color: #81d4fa;
+$primary-color-light: #b6ffff;
+$primary-color-dark: #4ba3c7;
+
+$secondary-color: #ffca28;
+$secondary-color-light: #fffd61;
+$secondary-color-dark: #c79a00;
