--- a/projects/prototype/src/app/page/main/main.component.scss
+++ b/projects/prototype/src/app/page/main/main.component.scss
@@ -63,7 +63,7 @@ h1 {
         transition: font-size 0.15s ease-in-out;
         color: $main-color-text;
 
-        app-icon-ledger, app-icon-trezor, app-icon-json {
+        brand-icon-ledger, brand-icon-trezor, brand-icon-json {
           height: $beforeSize + 8px;
           fill: $main-color-text;
           transition: height 0.15s ease-in-out;
@@ -86,7 +86,7 @@ h1 {
           i {
             font-size: $afterSize + 8px;
           }
-          app-icon-ledger, app-icon-trezor, app-icon-json {
+          brand-icon-ledger, brand-icon-trezor, brand-icon-json {
             height: $afterSize + 8px;
           }
         }
@@ -95,7 +95,7 @@ h1 {
       &:not(:disabled):not(.disabled):active {
         .method-name {
           color: $main-color-active-text;
-          app-icon-ledger, app-icon-trezor, app-icon-json {
+          brand-icon-ledger, brand-icon-trezor, brand-icon-json {
             fill: $main-color-active-text;
           }
         }
@@ -108,7 +108,7 @@ h1 {
         .method-name {
           font-size: $beforeSize;
 
-          app-icon-ledger, app-icon-trezor, app-icon-json {
+          brand-icon-ledger, brand-icon-trezor, brand-icon-json {
             height: $beforeSize + 8px;
           }
           i {
@@ -122,7 +122,7 @@ h1 {
             i {
               font-size: $afterSize + 8px;
             }
-            app-icon-ledger, app-icon-trezor, app-icon-json {
+            brand-icon-ledger, brand-icon-trezor, brand-icon-json {
               height: $afterSize + 8px;
             }
           }
