--- a/projects/wallet/src/app/component/spinner/spinner.component.scss
+++ b/projects/wallet/src/app/component/spinner/spinner.component.scss
@@ -12,6 +12,7 @@
   > div {
     height: 100%;
     width: 6px;
+    margin: 0 3px 0 0;
     display: inline-block;
 
     -webkit-animation: sk-stretchdelay 1.2s infinite ease-in-out;
